crates/beancount-tree-sitter/grammar.js
        file: $ => repeat(
            choice(
                $.headline,
                $._declarations,
                $._nl,
            )
        ),

        _nl: _ => choice('\n', '\r'),
        _eol: $ => choice('\n', '\r', $._eof),
        _indent: $ => token(/[ \r\t]+/),
        _eol: $ => token(/\n/),
        at: $ => token('@'),
        asterisk: $ => token('*'),
        slash: $ => token('/'),
        plus: $ => token('+'),
        minus: $ => token('-'),
        _none: $ => token('NULL'),
        date: $ => token(/([12]\d{3}[-\/](0[1-9]|1[0-2])[-\/](0[1-9]|[12]\d|3[01]))/),
        // Account names: Assets|Liabilities|Equity|Income|Expenses followed by colon-separated components
        // Components can contain Unicode letters/numbers including CJK characters
        // account: $ => $.identifier, // token(/[^\s\\ \n\r]/),

        account: $ =>
            token(
                seq(
                    /[A-Z][\p{L}\p{N}\u3040-\u309f\u30a0-\u30ff\u4e00-\u9fff\uac00-\ud7a3]*/,
                    repeat(
                        seq(
                            ":",
                            /[\p{Lu}\p{N}\u3040-\u309f\u30a0-\u30ff\u4e00-\u9fff\uac00-\ud7a3][\p{L}\p{N}\u3040-\u309f\u30a0-\u30ff\u4e00-\u9fff\uac00-\ud7a3\-]*/,
                        ),
                    ),
                ),
            ),
        currency: $ => token(/[A-Z]([A-Z0-9\'\._\-]{0,22}[A-Z0-9])?/),
        string: $ => token(/"([^"]|\\")*"/),
        number: $ => token(/([0-9]+|[0-9][0-9,]+[0-9])(\.[0-9]*)?/),
        txn: $ => choice(
            "txn",
            $.flag,
            "*",
            "#"
        ),

        _number_expr: $ =>
            choice(
                $.number,
                $._paren__number_expr,
                $.unary_number_expr,
                $.binary_number_expr,
            ),
        unary_number_expr: $ =>
            prec(3,
                choice(
                    seq(
                        $.minus,
                        $._number_expr,
                    ),
                    seq(
                        $.plus,
                        $._number_expr,
                    ),
                ),
            ),
        binary_number_expr: $ =>
            prec(3,
                choice(
                    prec.left(1,
                        seq($._number_expr, $.plus, $._number_expr),
                    ),
                    prec.left(1,
                        seq($._number_expr, $.minus, $._number_expr),
                    ),
                    prec.left(2,
                        seq($._number_expr, $.asterisk, $._number_expr),
                    ),
                    prec.left(2,
                        seq($._number_expr, $.slash, $._number_expr),
                    ),
                ),
            ),

        // OPTIONAL
        _txn_strings: $ =>
            choice(
                seq(
                    field("payee", alias($.string, $.payee)),
                    field("narration", alias($.string, $.narration)),
                ),
                field("narration", alias($.string, $.narration)),
            ),

        // OPTIONAL
        transaction: $ =>
            seq(
                field("date", $.date),
                field("txn", $.txn),
                optional($._txn_strings),
                field("tags_links", optional($.tags_links)),
                field("comment", optional($.comment)),
                $._eol,
                optional(
                    repeat1(
                        choice(
                            seq(
                                $._indent,
                                $._eol
                            ),
                            seq(
                                $._indent,
                                $.tags_links,
                                $._eol
                            ),
                            $._key_value_line,
                            $.posting,
                            seq(
                                $._indent,
                                field("comment", $.comment),
                                $._eol
                            )
                        )
                    ),
                ),

            ),

        // OPTIONAL
        price_annotation: $ =>
            choice(
                $.incomplete_amount,
                $.currency
            ),

        posting: $ =>
            seq(
                $._indent,
                field("optflag", optional($.optflag)),
                field("account", $.account),
                field("amount", optional($.incomplete_amount)),
                field("cost_spec", optional($.cost_spec)),
                optional(
                    seq(
                        choice($.at, $.atat),
                        field("price_annotation", optional($.price_annotation))
                    )
                ),
                field("comment", optional($.comment)),
                $._eol
            ),

        key: $ => token(/[a-z][a-zA-Z0-9\-_]+/),

        value: $ =>
            prec.left(choice(
                $.string,
                $.date,
                $.currency,
                $.account,
                $.tag,
                $.bool,
                $._none,
                $._number_expr,
                $.amount,
                $.string,
                $.unquoted_string,
            )),

        key_value: $ =>
            choice(
                $.currency_key_value,
                prec.left(seq(
                    $.key,
                    ":",
                    optional(
                        seq(
                            repeat(/ /),
                            $.value,
                        ),
                    ),
                )),
            ),

        _key_value_line: $ => seq(
            $._indent,
            /*prec.left(seq(
                $.key,
                ":",
                $.value,
            )),*/
            $.key_value,
            $._eol
        ),

        // OPTIONAL
        _key_value_list: $ =>
            repeat1(
                choice(
                    seq(
                        $._indent,
                        $._eol
                    ),
                    seq(
                        $._key_value_line
                    ),
                    seq(
                        $._indent,
                        field("comment", $.comment),
                        $._eol
                    ),
                )
            ),

        // OPTIONAL

        open: $ =>
            seq(
                field("date", $.date),
                "open",
                field("account", $.account),
                field("currencies", repeat(
                    seq(
                        $.currency,
                        repeat(
                            seq(
                                ",",
                                $.currency
                            )
                        )
                    ),
                )),
                field("opt_booking", optional($.opt_booking)),
                field("comment", optional($.comment)),
                $._eol,
                optional($._key_value_list)
            ),

        // OPTIONAL
        close: $ =>
            seq(
                field("date", $.date),
                "close",
                field("account", $.account),
                field("comment", optional($.comment)),
                $._eol,
                optional($._key_value_list)
            ),

        balance: $ =>
            seq(
                field("date", $.date),
                "balance",
                field("account", $.account),
                field("amount",
                    //choice(
                    //    $.amount,
                    $.amount_tolerance,
                    //)
                ),
                field("comment", optional($.comment)),
                $._eol,
                optional($._key_value_list)
            ),

        amount_tolerance: $ =>
            choice(
                seq(
                    $._number_expr,
                    $.currency
                ),
                seq(
                    $._number_expr,
                    "~",
                    $._number_expr,
                    $.currency
                )
            ),

        // Just Optional number_expr
        //maybe_number:

        // Just Optional currency
        //maybe_currency:

        compound_amount: $ =>
            choice(
                seq(
                    field("per", optional($._number_expr)),
                    field("currency", $.currency)
                ),
                seq(
                    field("per", $._number_expr),
                    field("currency", optional($.currency))
                ),
                seq(
                    field("per", optional($._number_expr)),
                    "#",
                    field("total", optional($._number_expr)),
                    field("currency", $.currency)
                ),
            ),

        // OPTIONAL
        // TODO may need a chice here
        incomplete_amount: $ =>
            seq(
                $._number_expr, // maybe_number
                $.currency      // maybe_currenecy
            ),

        // OPTIONAL
        cost_spec: $ =>
            choice(
                seq(
                    "{",
                    field("cost_comp_list", optional($._cost_comp_list)),
                    "}"
                ),
                seq(
                    "{{",
                    field("cost_comp_list", optional($._cost_comp_list)),
                    "}}"
                ),
            ),

        // OPTIONAL
        _cost_comp_list: $ =>
            seq(
                $.cost_comp,
                repeat(
                    seq(
                        ",",
                        $.cost_comp
                    )
                )
            ),

        cost_comp: $ =>
            choice(
                $.compound_amount,
                $.date,
                $.string,
                "*"
            ),

        _declarations: $ => choice(
            $._directive,
            $._entry,
            $._skipped_lines,
        ),

        /*--------------------------------------------------------------------------------*/
        /* UTILITY AND LEXICAL RULES */
        /*--------------------------------------------------------------------------------*/

        comment: $ => token(seq(';', /[^\r\n]*/)),

        // NOTE: includes reserved identifiers
        // Allow uppercase letters to support incomplete account names for LSP completion
